[project]
name = "keiba-pj"
version = "0.1.0"
description = ""
authors = [
    {name = "nytmy11",email = "nytmy11@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "keiba_pj", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
